[package]
name = "TricerOS"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = "0.15.2"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"
linked_list_allocator = "0.10.5"


[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]
 
#[profile.dev]
#panic = "abort" # disable stack unwinding on panic 

#[profile.release]
#panic = "abort" 
